vbnc/vbnc/tests/Errors/30714-3.vb
Interface SomeClass

    Property Foo() As New System.Collections.Generic.List(Of String)
    
End Interface